# mahjong

./: Cargo.toml  README
src/: mahjong.rs  main.rs
src/mahjong/: tile.rs
