[package]
name = "riichi_mahjong"
version = "0.1.0"
authors = ["Max Timkovich <mtimkovich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
rand = "0.8"
strum = "0.20"
strum_macros = "0.20"
